# SocraTeX

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  socratex.config.md
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: btw.md  compare.md  exam-prep.md  exercise.md  latex.md  mock-test.md  progress.md  proof.md  quiz.md  review-test.md  settings.md  study-guide.md  study.md  translate.md  visualize.md
.codex/: INSTALL.md
claude-ai/: README.md  system-prompt.md
converter/: __init__.py  __main__.py  cli.py  config.py  formatter.py  mineru_client.py
docs/: README.codex.md  README_es.md  README_ja.md  README_ko.md  README_zh.md
plugin/: SocraTeX.config.md
plugin/.claude-plugin/: plugin.json
skills/_shared/: core-rules.md  session-file-template.html  style-analysis-guide.md
skills/btw/: SKILL.md
skills/compare/: SKILL.md
skills/derive/: SKILL.md
skills/exam-prep/: SKILL.md
skills/exercise/: SKILL.md  problem-generation-guide.md
skills/feynman/: SKILL.md
skills/flashcard/: SKILL.md
skills/latex/: SKILL.md
skills/mistake/: SKILL.md  common-stem-mistakes.md
skills/mock-test/: SKILL.md
skills/prereq/: SKILL.md
skills/progress/: SKILL.md
skills/quiz/: SKILL.md
skills/relate/: SKILL.md
skills/review-test/: SKILL.md
skills/roadmap/: SKILL.md
skills/settings/: SKILL.md
skills/solve/: SKILL.md
skills/study/: SKILL.md
skills/study-guide/: SKILL.md
skills/summary/: SKILL.md
skills/translate/: SKILL.md
skills/visualize/: SKILL.md
(+45 files in other folders)
